--- a/src/App.css
+++ b/src/App.css
@@ -2,37 +2,34 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  /* tus estilos para el header */
+}
+
+.Main-content {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex-direction: row;
+  height: calc(100vh - 1vh); /* Reemplaza 'alturaDelHeader' con la altura real de tu header */
+  padding: 20px;
 }
 
-.App-link {
-  color: #61dafb;
+.Sidebar {
+  width: 20%; /* O el ancho que prefieras para tu sidebar */
+  overflow-y: auto; /* Permite el scroll en la lista si es muy larga */
+  height: 100%; /* Toma la altura completa del Main-content */
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.MapArea {
+  flex-grow: 1; /* Ocupa el espacio restante */
+  overflow: hidden; /* Si no quieres scroll en el mapa */
+}
+
+@media (max-width: 768px) {
+  .Sidebar {
+    width: 100%; /* En dispositivos móviles, el sidebar ocupa todo el ancho */
   }
-  to {
-    transform: rotate(360deg);
+  
+  .MapArea {
+    display: none; /* El mapa se oculta en dispositivos móviles */
   }
 }
